@@ -56,6 +56,7 @@ S3method(edit, default)
 S3method(edit, matrix)
 S3method(edit, vignette)
 S3method(format, "news_db")
+S3method(format, "object_size")
 S3method(format, "roman")
 S3method(head, data.frame)
 S3method(head, default)
