@@ -1,10 +1,11 @@
 % File src/library/utils/man/object.size.Rd
 % Part of the R package, http://www.R-project.org
-% Copyright 1995-2011 R Core Team
+% Copyright 1995-2013 R Core Team
 % Distributed under GPL 2 or later
 
 \name{object.size}
 \alias{object.size}
+\alias{format.object_size}
 \alias{print.object_size}
 \title{Report the Space Allocated for an Object}
 \description{
@@ -13,16 +14,17 @@
 \usage{
 object.size(x)
 
+\method{format}{object_size}(x, units = "b", \dots)
 \method{print}{object_size}(x, quote = FALSE, units = "b", \dots)
 }
 \arguments{
   \item{x}{An \R object.}
   \item{quote}{logical, indicating whether or not the result should be
     printed with surrounding quotes.}
-  \item{units}{The units to be used in printing the size.  Other allowed
-    values are \code{"Kb"}, \code{"Mb"}, \code{"Gb"} and \code{"auto"}
-    (see \sQuote{Details}).
-    As from \R 2.14.0, \code{"KB"} etc are also accepted.}
+  \item{units}{The units to be used in printing the size.  Allowed
+    values are \code{"b"}, \code{"Kb"}, \code{"Mb"}, \code{"Gb"},
+    \code{"B"}, \code{"KB"}, \code{"MB"}, \code{"GB"}, and \code{"auto"}
+    (see \sQuote{Details}).} 
   \item{\dots}{Arguments to be passed to or from other methods.}
 }
 \details{
@@ -59,7 +61,7 @@ object.size(x)
 \examples{
 object.size(letters)
 object.size(ls)
-print(object.size(library), units = "auto")
+format(object.size(library), units = "auto")
 ## find the 10 largest objects in the base package
 z <- sapply(ls("package:base"), function(x)
             object.size(get(x, envir = baseenv())))
